RESOLVED FIXED 204927
Fix WebGL conformance test build_177_to_178.html with USE_ANGLE
https://bugs.webkit.org/show_bug.cgi?id=204927
Summary Fix WebGL conformance test build_177_to_178.html with USE_ANGLE
James Darpinian
Reported 2019-12-05 16:07:32 PST
Fix WebGL conformance test build_177_to_178.html with USE_ANGLE
Attachments
Fix WebGL conformance test build_177_to_178.html with USE_ANGLE (1.85 KB, patch)
2019-12-05 16:10 PST, James Darpinian
no flags
Don't disable extension for compileShaderDirect (2.13 KB, patch)
2019-12-05 16:15 PST, James Darpinian
no flags
James Darpinian
Comment 1 2019-12-05 16:10:24 PST
Created attachment 384972 [details] Fix WebGL conformance test build_177_to_178.html with USE_ANGLE
James Darpinian
Comment 2 2019-12-05 16:15:10 PST
Created attachment 384973 [details] Don't disable extension for compileShaderDirect
Kenneth Russell
Comment 3 2019-12-06 16:56:44 PST
LGTM but I'm not a reviewer. Dean, Alex, possible to get your review of this?
Dean Jackson
Comment 4 2019-12-17 13:27:55 PST
Comment on attachment 384973 [details] Don't disable extension for compileShaderDirect View in context: https://bugs.webkit.org/attachment.cgi?id=384973&action=review > Source/WebCore/platform/graphics/angle/GraphicsContext3DANGLE.cpp:-822 > - compileShader(shader); Hopefully this method will go away soon (with an ANGLE backend)
WebKit Commit Bot
Comment 5 2019-12-17 15:17:53 PST
Comment on attachment 384973 [details] Don't disable extension for compileShaderDirect Clearing flags on attachment: 384973 Committed r253652: <https://trac.webkit.org/changeset/253652>
WebKit Commit Bot
Comment 6 2019-12-17 15:17:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-12-17 15:18:30 PST
Note You need to log in before you can comment on or make changes to this bug.