Fix WebGL conformance test build_177_to_178.html with USE_ANGLE https://bugs.webkit.org/show_bug.cgi?id=204927

Disable ANGLE_texture_rectangle when compiling user shaders.
This mirrors a change I made to Chromium here:
https://chromium-review.googlesource.com/c/chromium/src/+/1842223

Patch by James Darpinian <jdarpinian@chromium.org> on 2019-12-17
Reviewed by Dean Jackson.

* platform/graphics/angle/GraphicsContext3DANGLE.cpp:
(WebCore::GraphicsContext3D::compileShader):

Canonical link: https://commits.webkit.org/218556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253652 268f45cc-cd09-0410-ab3c-d52691b4dbfc